--- a/love.html
+++ b/love.html
@@ -100,15 +100,12 @@
         <div class="middle2">
         </div>
 
-        <img src="http://m.qpic.cn/psc?/V53msBxC24lQAL0BFnYX0fx1ny3ZMYrX/bqQfVz5yrrGYSXMvKr.cqeWl1fUVjgX.*mS1vf5gltNXX5SOYfr0qzVeXmLZ9E7lAEakUDPylR6kzIf4Uo5WdBzN0iJkPCzd4cZZ03hfv2c!/b&bo=VgPgAQAAAAAChxc!&rf=viewer_4"
+        <img src="./psc.gif"
             width="854" height="480" />
     </div>
 
 </body>
-<audio autoplay="autoplay" loop="loop" preload="auto"
-    src="http://ws.stream.qqmusic.qq.com/C4000009nowb1Lxsk5.m4a?guid=291747946&vkey=927E1CB036619BB457EC5C1E98E58C4646FD00050805BB0984A5BFCA3496DCEB4584A8A036F397667725E74D8AC498ED6108144422F6FC6F&uin=&fromtag=120032">
-</audio>
-<script type="text/javascript" src="//js.users.51.la/21504121.js"></script>
+
 </body>
 
 </html>
