--- a/dnf/index.html
+++ b/dnf/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      img {
+        width: 100%;
+        height: auto;
+      }
+    </style>
   </head>
   <body>
     <img src="imgs/1.jpg" />
