--- a/dnf/index.html
+++ b/dnf/index.html
@@ -5,20 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dnf 团本记录</title>
     <style>
-      img {
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      h1 {
+        padding: 10px;
+      }
+      /* 设置占位符样式 */
+      .placeholder {
         width: 100%;
         height: auto;
+        /* height: 300px; */
+        /* height: 100vh; */
+        background-color: #ccc;
+        aspect-ratio: 375 / 173;
       }
     </style>
   </head>
   <body>
-    <img src="imgs/1.jpg" />
-    <img src="imgs/2.jpg" />
-    <img src="imgs/3.jpg" />
-    <img src="imgs/4.jpg" />
-    <img src="imgs/5.jpg" />
-    <img src="imgs/6.jpg" />
-    <img src="imgs/7.jpg" />
-    <img src="imgs/8.jpg" />
+    <h1 style="text-align: center">dnf 团本记录</h1>
+    <!-- 图片懒加载 -->
+    <div class="container">
+      <img class="placeholder" data-src="imgs/1.jpg" />
+      <img class="placeholder" data-src="imgs/2.jpg" />
+      <img class="placeholder" data-src="imgs/3.jpg" />
+      <img class="placeholder" data-src="imgs/4.jpg" />
+      <img class="placeholder" data-src="imgs/5.jpg" />
+      <img class="placeholder" data-src="imgs/6.jpg" />
+      <img class="placeholder" data-src="imgs/7.jpg" />
+      <img class="placeholder" data-src="imgs/8.jpg" />
+    </div>
+
+    <script>
+      // 获取所有带有懒加载标记的图片元素
+      const lazyImages = document.querySelectorAll(".placeholder");
+
+      // 创建 Intersection Observer 实例
+      const observer = new IntersectionObserver(
+        (entries) => {
+          // entries 是一个 IntersectionObserverEntry 对象数组
+          // 遍历每个 entry 判断是否在视口中
+          entries.forEach((entry) => {
+            console.log("[ entry ]", entry, entry.isIntersecting);
+            // 如果 entry 在视口中
+            if (entry.isIntersecting) {
+              // 获取 data-src 属性中的真实图片地址
+              const realSrc = entry.target.getAttribute("data-src");
+              // 将真实图片地址赋值给 src 属性，触发图片加载
+              const img = entry.target;
+              img.src = realSrc;
+              // 图片加载后，不再监听
+              img.onload = () => img.removeAttribute("data-src");
+              observer.unobserve(entry.target);
+            }
+          });
+        },
+        {
+          rootMargin: "0px 0px 50px 0px", // Load 50px before image is in view
+          threshold: 0.1, // Trigger when 10% of the image is visible
+        }
+      );
+
+      // 遍历所有带有懒加载标记的图片元素，开始监听
+      lazyImages.forEach((image) => {
+        observer.observe(image);
+      });
+    </script>
   </body>
 </html>
