--- a/dnf/index.html
+++ b/dnf/index.html
@@ -21,12 +21,23 @@
         background-color: #ccc;
         aspect-ratio: 375 / 173;
       }
+      h2 {
+        text-align: center;
+      }
+      hr {
+        margin: 50px 0;
+      }
     </style>
   </head>
   <body>
     <h1 style="text-align: center">dnf 团本记录</h1>
     <!-- 图片懒加载 -->
     <div class="container">
+      <h2>2024-07-29</h2>
+      <img class="placeholder" data-src="imgs/9.jpg" />
+      <img class="placeholder" data-src="imgs/10.jpg" />
+      <img class="placeholder" data-src="imgs/11.jpg" />
+      <hr />
       <img class="placeholder" data-src="imgs/1.jpg" />
       <img class="placeholder" data-src="imgs/2.jpg" />
       <img class="placeholder" data-src="imgs/3.jpg" />
