--- a/dnf/index.html
+++ b/dnf/index.html
@@ -33,6 +33,11 @@
     <h1 style="text-align: center">dnf 团本记录</h1>
     <!-- 图片懒加载 -->
     <div class="container">
+      <h2>2024-08-05</h2>
+      <img class="placeholder" data-src="imgs/12.jpg" />
+      <img class="placeholder" data-src="imgs/13.jpg" />
+      <img class="placeholder" data-src="imgs/14.jpg" />
+      <hr />
       <h2>2024-07-29</h2>
       <img class="placeholder" data-src="imgs/9.jpg" />
       <img class="placeholder" data-src="imgs/10.jpg" />
