--- a/dnf/index.html
+++ b/dnf/index.html
@@ -33,6 +33,12 @@
     <h1 style="text-align: center">dnf 团本记录</h1>
     <!-- 图片懒加载 -->
     <div class="container">
+      <h2>2024-08-20</h2>
+      <img class="placeholder" data-src="imgs/21.jpg" />
+      <img class="placeholder" data-src="imgs/22.jpg" />
+      <img class="placeholder" data-src="imgs/23.jpg" />
+      <hr />
+
       <h2>2024-08-14</h2>
       <img class="placeholder" data-src="imgs/18.jpg" />
       <img class="placeholder" data-src="imgs/19.jpg" />
