--- a/dnf/index.html
+++ b/dnf/index.html
@@ -33,6 +33,12 @@
     <h1 style="text-align: center">dnf 团本记录</h1>
     <!-- 图片懒加载 -->
     <div class="container">
+      <h2>2024-09-12</h2>
+      <img class="placeholder" data-src="imgs/30.jpg" />
+      <img class="placeholder" data-src="imgs/31.jpg" />
+      <img class="placeholder" data-src="imgs/32.jpg" />
+      <hr />
+
       <h2>2024-09-03</h2>
       <img class="placeholder" data-src="imgs/27.jpg" />
       <img class="placeholder" data-src="imgs/28.jpg" />
