--- a/dnf/index.html
+++ b/dnf/index.html
@@ -33,6 +33,12 @@
     <h1 style="text-align: center">dnf 团本记录</h1>
     <!-- 图片懒加载 -->
     <div class="container">
+      <h2>2024-09-13</h2>
+      <img class="placeholder" data-src="imgs/33.jpg" />
+      <img class="placeholder" data-src="imgs/34.jpg" />
+      <img class="placeholder" data-src="imgs/35.jpg" />
+      <hr />
+
       <h2>2024-09-12</h2>
       <img class="placeholder" data-src="imgs/30.jpg" />
       <img class="placeholder" data-src="imgs/31.jpg" />
