--- a/dnf/index.html
+++ b/dnf/index.html
@@ -34,6 +34,12 @@
     <!-- 图片懒加载 -->
     <div class="container">
       <h2>2024-09-13</h2>
+      <img class="placeholder" data-src="imgs/36.jpg" />
+      <img class="placeholder" data-src="imgs/37.jpg" />
+      <img class="placeholder" data-src="imgs/38.jpg" />
+      <hr />
+
+      <h2>2024-09-13</h2>
       <img class="placeholder" data-src="imgs/33.jpg" />
       <img class="placeholder" data-src="imgs/34.jpg" />
       <img class="placeholder" data-src="imgs/35.jpg" />
