--- a/dnf/index.html
+++ b/dnf/index.html
@@ -33,7 +33,13 @@
     <h1 style="text-align: center">dnf 团本记录</h1>
     <!-- 图片懒加载 -->
     <div class="container">
-      <h2>2024-09-13</h2>
+      <h2>2024-09-20</h2>
+      <img class="placeholder" data-src="imgs/39.jpg" />
+      <img class="placeholder" data-src="imgs/40.jpg" />
+      <img class="placeholder" data-src="imgs/41.jpg" />
+      <hr />
+
+      <h2>2024-09-16</h2>
       <img class="placeholder" data-src="imgs/36.jpg" />
       <img class="placeholder" data-src="imgs/37.jpg" />
       <img class="placeholder" data-src="imgs/38.jpg" />
