--- a/dnf/index.html
+++ b/dnf/index.html
@@ -33,6 +33,12 @@
     <h1 style="text-align: center">dnf 团本记录</h1>
     <!-- 图片懒加载 -->
     <div class="container">
+      <h2>2024-09-23</h2>
+      <img class="placeholder" data-src="imgs/42.jpg" />
+      <img class="placeholder" data-src="imgs/43.jpg" />
+      <img class="placeholder" data-src="imgs/44.jpg" />
+      <hr />
+
       <h2>2024-09-20</h2>
       <img class="placeholder" data-src="imgs/39.jpg" />
       <img class="placeholder" data-src="imgs/40.jpg" />
