--- a/dnf/index.html
+++ b/dnf/index.html
@@ -72,6 +72,12 @@
       >
         <!-- 普通章鱼 -->
         <div class="container">
+          <h2>2024-09-30</h2>
+          <img class="img_placeholder" data-src="imgs/45.jpg" />
+          <img class="img_placeholder" data-src="imgs/46.jpg" />
+          <img class="img_placeholder" data-src="imgs/47.jpg" />
+          <hr />
+
           <h2>2024-09-23</h2>
           <img class="img_placeholder" data-src="imgs/42.jpg" />
           <img class="img_placeholder" data-src="imgs/43.jpg" />
@@ -162,6 +168,12 @@
       >
         <!-- 困难章鱼 -->
         <div class="container">
+          <h2>2024-10-04</h2>
+          <img class="img_placeholder" data-src="imgs/a7.jpg" />
+          <img class="img_placeholder" data-src="imgs/a8.jpg" />
+          <img class="img_placeholder" data-src="imgs/a9.jpg" />
+          <hr />
+
           <h2>2024-09-28</h2>
           <img class="img_placeholder" data-src="imgs/a4.jpg" />
           <img class="img_placeholder" data-src="imgs/a5.jpg" />
