--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
       <li><a href="./dnf/index.html">dnfm</a></li>
       <li>停车码</li>
+      <li><a href="./demo/index.html">前端demo</a></li>
     </ul>
   </body>
 </html>
